# krtcsdk

./: .gitignore  CMakeLists.txt  README.md  build.sh
examples/: CMakeLists.txt
examples/qtdemo/: CMakeLists.txt
examples/qtdemo/src/: YUVOpenGLWidget.cpp  YUVOpenGLWidget.h  defs.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
krtc/: CMakeLists.txt  krtc.cpp  krtc.h
krtc/base/: krtc_global.cpp  krtc_global.h  krtc_http.cpp  krtc_http.h  krtc_json.cpp  krtc_json.h  krtc_thread.cpp  krtc_thread.h  krtc_utils.cpp  krtc_utils.h
krtc/codec/: common_encoder.h  external_video_decoder_factory.cpp  external_video_decoder_factory.h  external_video_encoder_factory.cpp  external_video_encoder_factory.h  nv_encoder.cpp  nv_encoder.h  qsv_encoder.cpp  qsv_encoder.h  x265_decoder.cpp  x265_decoder.h  x265_encoder.cpp  x265_encoder.h
krtc/codec/nvcodec/NvDecoder/: NvDecoder.cpp
krtc/codec/qsvcodec/src/: mfx_dispatcher_log.cpp  mfx_dispatcher_log.h  mfx_exposed_functions_list.h  mfxaudio_exposed_functions_list.h
krtc/device/: audio_device_data_observer.cpp  audio_device_data_observer.h  audio_track.cpp  audio_track.h  camera_video_source.cpp  camera_video_source.h  desktop_capturer.cpp  desktop_capturer.h  desktop_video_source.cpp  desktop_video_source.h  krtc_audio_track.cpp  krtc_audio_track.h  mic_impl.cpp  mic_impl.h  vcm_capturer.cpp  vcm_capturer.h  video_capturer.cpp  video_capturer.h
krtc/media/: default.h  krtc_media_base.cpp  krtc_media_base.h  krtc_preview.cpp  krtc_preview.h  krtc_pull_impl.cpp  krtc_pull_impl.h  krtc_puller.cpp  krtc_puller.h  krtc_push_impl.cpp  krtc_push_impl.h  krtc_pusher.cpp  krtc_pusher.h  media_frame.h  stats_collector.cpp  stats_collector.h
krtc/net/: base64.cpp  base64.h  file_reader.h  file_writer.h  global_defs.h  http_client.cpp  http_client.h  http_global.h  http_pool.h  http_post_file.h  http_request.cpp  http_request.h  http_response.h  http_response_receiver.cpp  http_response_receiver.h  http_thread.h  proxy_config.h  proxy_socket.h  socket_helper.cpp  socket_helper.h  standard_header.h  streaming_socket.h  util.h
krtc/render/: video_renderer.cpp  video_renderer.h
krtc/render/win/: d3d_renderer.cpp  d3d_renderer.h
krtc/tools/: logstreamfile.cpp  logstreamfile.h  timer.cpp  timer.h  utils.cc  utils.cpp  utils.h  uuid4.cpp
